Move settings to JSON format